# rpi-e131-server-smi-lights

./: CMakeLists.txt  basic_dma_test.c  basic_dma_test.cpp  basic_pixels_test.c  config.txt  mailbox.c  mailbox.cpp  mailbox.h  mem_utils.c  mem_utils.cpp  mem_utils.h  pi_board.c  pi_board.cpp  pi_board.h  readme.md  ringbuf.c  ringbuf.h  rpi_dma_test.c  rpi_dma_utils.c  rpi_dma_utils.h  rpi_pixels_receiver.c  rpi_pixleds.c  rpi_smi_defs.h
pi_hw/: pi_util.c  pi_util.h
